# fyp-small-language-models

./: LICENSE  README.md  mlflow.db  pyproject.toml
initial-ideas/symbolic-augmented-inference-framework/: test-approaches.py
mlruns/1/07ff9f6fe0b244879dea9e0e502f4be4/artifacts/: kg_outputs.txt  rag_outputs.txt  saif_outputs.txt
mlruns/1/e5280d365b3d416dbc916ac007aa0d31/artifacts/: kg_outputs.txt  rag_outputs.txt  saif_outputs.txt
