[project]
name = "fyp-small-language-models"
version = "0.1.0"
description = "Final year undergraduate research project using Small Language Models"
authors = [
    {name = "Ravindu Weerasinghe",email = "ravindutharuka2001@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "<3.15, >=3.13"
dependencies = [
    "transformers (>=4.57.6,<5.0.0)",
    "mlflow (>=3.8.1,<4.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "graphql-core (>=3.2.7,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
